<resources>
    <!-- activity_main.xml -->
    <string name="app_name">RandoJoelette</string>
    <string name="label_identifiant">Identifiant</string>
    <string name="label_mdp">Mot de passe</string>
    <string name="btn_connexion">Connexion</string>
    <string name="btn_inscription">Inscription</string>
    <string name="hint_identifiant">Saisir votre identifiant ici</string>
    <string name="hint_mdp">Saisir votre mot de passe ici</string>

    <string-array name="array_statut">
        <item>Choisir votre statut</item>
        <item>Association</item>
        <item>Randonneur membre</item>
        <item>Randonneur externe</item>
        <item>Randonneur handicapé</item>
    </string-array>
    <string name="btn_valider">Valider</string>

    <!-- account_asso_activity -->
    <string name="label_nom_president">Nom du président</string>
    <string name="label_nom_asso">Nom de l\'association</string>
    <string name="label_adresse_association">Adresse de l\'association</string>
    <string name="tel_association">Téléphone de l\'association</string>

    <!-- account_assomember_activity ### account_randomember_activity ### account_handimember_activity -->
    <string name ="label_nom_randonneur">Nom</string>
    <string name="label_prenom_randonneur">Prénom</string>
    <string name="label_adresse_randonneur">Adresse</string>
    <string name="label_tel_randonneur">Téléphone</string>

    <!-- asso_main_activity -->
    <string name="label_rando_active">Les randonnées actives</string>
    <string name="btn_creer_rando">Créer une randonnée</string>

    <!-- randomember_main-activity *** assomember_main_activity *** handiassomember_main_activity -->
    <string name="label_rando_dispo">Les randonnées disponibles</string>
    <string name="label_mes_rando">Mes randonnées</string>
    <string name="valide_valider">Valider</string>
    <string name="valide_annuler">Annuler</string>
    <string name="participation_rando">Participation à la randonnée</string>
    <string name="motif">Motif</string>
    <string name="saisie_motif">Saisir le motif</string>
    <string name="annule_participation">J\'annule ma participation</string>

    <string name="label_inscription_association">INSCRIPTION ASSOCIATION</string>
    <string name="label_inscription_membre">INSCRIPTION RANDONNEUR MEMBRE</string>
    <string name="label_inscription_externe">INSCRIPTION RANDONNEUR EXTERNE</string>
    <string name="label_inscription_handicape">INSCRIPTION RANDONNEUR HANDICAPE</string>

    <string name="btn_modifier_randonnee">Modifier cette randonnée</string>

    <!-- asso_modify_event_activity -->
    <string name="label_nom_rando">Randonnée 1</string>
    <string name="label_date_rando">Date</string>
    <string name="label_lieu">Lieu</string>
    <string name="label_nb_participant">Nombre de participant</string>
    <string name="label_date_echeance">Echéance de réponse</string>
    <string name="label_participation">Participation à la randonnée</string>
    <string name="label_motif">Motif</string>

    <string name="hint_date">Saisir la date ici</string>
    <string name="hint_lieu">Saisir le lieu ici</string>
    <string name="hint_nb_participant_min">Saisir le nombre de participant requis ici</string>
    <string name="hint_date_echeance">Saisir la date échéance ici</string>
    <string name="hint_motif">Saisir le motif ici</string>

    <string name="btn_annuler">Annuler</string>
    <string name="label_base_inscription">INSCRIPTION RANDONNEUR </string>

    <string name="btn_valider_rando">Valider la randonnée</string>

    <string name="btn_date">Date</string>
</resources>
