<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_nom_rando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_nom_rando"/>

    <TextView
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:text="@string/label_date_rando"/>

    <EditText
        android:id="@+id/saisie_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"/>

    <TextView
        android:id="@+id/label_lieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:layout_gravity="center"
        android:text="@string/label_lieu"/>

    <EditText
        android:id="@+id/saisie_lieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lieu"/>

    <TextView
        android:id="@+id/label_nb_participant_requis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:layout_gravity="center"
        android:text="@string/label_nb_participant_requis"/>

    <EditText
        android:id="@+id/saisie_nb_participant_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nb_participant_min"/>

    <TextView
        android:id="@+id/label_date_echeance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:layout_gravity="center"
        android:text="@string/label_date_echeance"/>

    <EditText
        android:id="@+id/saisie_echeance_reponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date_echeance"/>

    <TextView
        android:id="@+id/label_participe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:layout_gravity="center"
        android:text="@string/label_participation"/>

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_valider"/>

    <Button
        android:id="@+id/btn_annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_annuler"/>

    <TextView
        android:id="@+id/label_motif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:layout_gravity="center"
        android:text="@string/label_motif"/>

    <EditText
        android:id="@+id/saisie_motif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_motif"/>


</LinearLayout>