<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_identifiant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_identifiant"/>

    <EditText
        android:id="@+id/saisie_identifiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_identifiant"/>

    <TextView
        android:id="@+id/label_mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/label_mdp"/>

    <EditText
        android:id="@+id/saisie_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mdp"/>

    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_connexion"/>

    <Button
        android:id="@+id/btn_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_inscription"/>
    
</LinearLayout>