<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountAssoActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_inscription_membre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="23dp"
        android:text="@string/label_inscription_association" />

    <TextView
        android:id="@+id/label_nom_asso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/label_nom_asso"/>

    <EditText
        android:id="@+id/saisie_nom_asso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/label_nom_president"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/label_nom_president"/>

    <EditText
        android:id="@+id/saisie_nom_president"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/label_adresse_asso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/label_adresse_association"/>

    <EditText
        android:id="@+id/saisie_adresse_asso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"/>

    <TextView
        android:id="@+id/label_tel_asso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/label_adresse_association"/>

    <EditText
        android:id="@+id/saisie_tel_asso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"/>

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marge_verticale_vue_principale"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_valider"/>

</LinearLayout>